Add Pinecone API credentials and PDF loading function

--- a/trials.ipynb
+++ b/trials.ipynb
@@ -289,14 +289,28 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "PINECONE_API_KEY = \"pcsk_4Z5hxJ_Mn3SzVQQgNiXHJLziL27na4BxzZdnmMPvi8RekpoZ7VFkLRwUnAL2D5oRyXdSMb\"\n",
+    "PINECONE_API_ENV = \"aws_starter\"\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Extract Data From the PDF File\n",
+    "def load_pdf_file(data):\n",
+    "    loader= DirectoryLoader(data,\n",
+    "                            glob=\"*.pdf\",\n",
+    "                            loader_cls=PyPDFLoader)\n",
+    "\n",
+    "    documents=loader.load()\n",
+    "\n",
+    "    return documents"
+   ]
   }
  ],
  "metadata": {
